# foreign-whispers

./: .gitignore  app.py  docker-compose.yml  download_video.py  main.py  pyproject.toml  requirements.txt  tts.py  tts_es.py  video_registry.yml
api/src/: main.py
api/src/core/: config.py
api/src/routers/: diarize.py
api/src/services/: tts_service.py
core/: config.py
docs/superpowers/plans/: 2026-03-21-chatterbox-tts-migration.md  2026-03-21-diarization-student-assignment.md
docs/superpowers/specs/: 2026-03-17-tts-temporal-alignment-design.md  2026-03-18-foreign-whispers-library-design.md
foreign_whispers/: alignment.py  diarization.py  reranking.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  control-panel.tsx  diarization-accordion.tsx  dubbing-method-accordion.tsx  media-library.tsx  pipeline-table.tsx  studio-layout.tsx  (+2 more)
notebooks/alignment_integration/: alignment_integration.ipynb
notebooks/diarization_integration/: diarization_integration.ipynb
notebooks/download_integration/: download_integration.ipynb
notebooks/pipeline_end_to_end/: pipeline_end_to_end.ipynb
notebooks/stitch_integration/: stitch_integration.ipynb
notebooks/transcription_integration/: transcription_integration.ipynb
notebooks/translation_integration/: translation_integration.ipynb
notebooks/tts_integration/: tts_integration.ipynb
tests/: test_fastapi_skeleton.py  test_tts_alignment_wire.py  test_tts_baseline_flag.py  test_tts_es.py  test_tts_router.py
(+3 files in other folders)
